<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlaceOrderActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:background="@color/colorBackground"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/hen"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:id="@+id/potextView_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_phone_number_text"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/poeditText_phoneNumebr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:background="@drawable/input_design"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_customer_name_text"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/poeditText_customerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:background="@drawable/input_design"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_address_text"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/poeditText_customerAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:background="@drawable/input_design"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_much_kg_text"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/poeditText_orderStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:background="@drawable/input_design"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <Button
                        android:id="@+id/pobutton_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/select_date"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:gravity="left"
                        android:background="@drawable/button_hollow"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <Button
                        android:id="@+id/pobutton_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/select_time"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:gravity="left"
                        android:background="@drawable/button_hollow"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/promotion"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/textView_promtion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/promotion2"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />


                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/proceed"
                    android:onClick="placeOrder"
                    android:textColor="@android:color/white"
                    android:background="@drawable/button_design"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>