<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlaceOrder2Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:background="@color/colorBackground">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/potextView_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no_text"
                    android:textSize="16sp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/black"/>

                <EditText
                    android:id="@+id/textView_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:editable="false"
                    android:layout_margin="5dp"
                    android:padding="15dp"
                    android:background="@drawable/input_design"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/textView_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="none"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:editable="false"
                        android:background="@drawable/input_design"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>


                    <EditText
                        android:id="@+id/textView_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="none"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:editable="false"
                        android:background="@drawable/input_design"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_msg"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/editText_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:layout_margin="5dp"
                        android:padding="15dp"
                        android:background="@drawable/input_design"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_payment_method"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/black"/>

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp">

                        <RadioButton
                            android:id="@+id/radioButton_cod"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cash_on_delivery"
                            android:onClick="onRadiobuttonClicked"/>

                        <RadioButton
                            android:id="@+id/radioButton_online"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:onClick="onRadiobuttonClicked"
                            android:text="@string/online" />
                    </RadioGroup>
                </LinearLayout>
    <Button
        android:id="@+id/button_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_btn_text"
        android:background="@drawable/button_design"
        android:textColor="@android:color/white"
        android:layout_margin="20dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>